--- a/Latex Document/Latex Files/main.tex
+++ b/Latex Document/Latex Files/main.tex
@@ -11,6 +11,8 @@
 \usepackage[hidelinks]{hyperref}
 \setlength\bibitemsep{20pt} 
 
+\sloppy
+
 
 \addbibresource{References.bib}
 
@@ -66,6 +68,8 @@
     \item{\fontspec{CamingoCode}Vector2\normalfont: A collection/array of two float variables. The first one is named ‘x’, and the second one is named ‘y’.}
     
     \item{\fontspec{CamingoCode}Vector3\normalfont: A collection/array of three float variables. In addition to the two variables in \fontspec{CamingoCode}Vector2\normalfont, the third one is named ‘z’.}
+    
+    \item{Boolean: A variable type that only has two possible values: ‘\fontspec{CamingoCode}true\normalfont’ or ‘\fontspec{CamingoCode}false\normalfont’.}
  \end{itemize}
 \section{Acronyms}
 
